# skills-manager

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  product-intro.html  skill-instanall.md  tailwind.config.js  tsconfig.json  vite.config.ts  安装说明.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-26-electron-to-tauri-migration.md
docs/superpowers/specs/: 2026-03-26-electron-to-tauri-migration-design.md
scripts/: post-build.mjs
src/: App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: copier.rs  discovery.rs  install.rs  mod.rs  scanner.rs  store.rs  utils.rs
src/components/: HubPanel.tsx  InstallModal.tsx  ResizableSidebar.tsx  SettingsDrawer.tsx  Sidebar.tsx  SkillCard.tsx  SkillDetailPanel.tsx
src/context/: AppContext.tsx
src/main/: copier.ts  discovery.ts  elevate.ts  index.ts  preload.ts  scanner.ts  store.ts
src/renderer/: App.tsx  env.d.ts  index.css
src/renderer/components/: BottomBar.tsx  HubPanel.tsx  InstallModal.tsx  ResizableSidebar.tsx  SettingsDrawer.tsx  Sidebar.tsx  SkillCard.tsx  SkillDetailPanel.tsx  SkillGrid.tsx  Toolbar.tsx
src/renderer/context/: AppContext.tsx
