[package]
name = "skills-manager"
version = "1.0.0"
edition = "2021"

[lib]
name = "skills_manager_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
serde_yaml        = "0.9"
sha2              = "0.10"
dirs              = "5"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
